@@ -2,6 +2,8 @@
 
 	Updated/fixed packages: cloop, m4, openssh, xz
 
+	New packages: lsuio
+
 2010.11, Released November 30th, 2010:
 
 	Fixes all over the tree.
